# NGFix

./: .gitignore  CMakeLists.txt  LICENSE  README.md
ngfixlib/graph/: hnsw_ngfix.h  hnsw_ngfix_rabitq.h  node.h
ngfixlib/metric/: ip.h  l2.h  rabitq.h  space.h
ngfixlib/utils/: search_list.h  search_queue.h  visited_list.h
rabitqlib/: defines.hpp
rabitqlib/fastscan/: fastscan.hpp  highacc_fastscan.hpp
rabitqlib/index/: estimator.hpp  lut.hpp  query.hpp
rabitqlib/index/hnsw/: hnsw.hpp
rabitqlib/index/ivf/: cluster.hpp  initializer.hpp  ivf.hpp
rabitqlib/index/symqg/: qg.hpp  qg_builder.hpp
rabitqlib/quantization/: data_layout.hpp  pack_excode.hpp  rabitq.hpp  rabitq_impl.hpp
rabitqlib/third/hnswlib/: hnswalg.h  hnswlib.h  space_ip.h
rabitqlib/utils/: array.hpp  buffer.hpp  hashset.hpp  io.hpp  memory.hpp  rotator.hpp  space.hpp  stopw.hpp  tools.hpp  visited_pool.hpp  warmup_space.hpp
shell/: build_hnsw_bottom.sh  build_hnsw_bottom_rabitq.sh  build_hnsw_ngfix.sh  build_hnsw_ngfix_aknn.sh  build_hnsw_ngfix_rabitq.sh  search_hnsw_ngfix.sh  search_hnsw_ngfix_rabitq.sh  test_hnsw_ngfix_deletion.sh  test_hnsw_ngfix_insertion.sh
test/: CMakeLists.txt  build_hnsw_bottom.cc  build_hnsw_ngfix.cc  build_hnsw_ngfix_aknn.cc  data_loader.h  result_evaluation.h  search_hnsw_ngfix.cc  test_hnsw_ngfix_deletion.cc  test_hnsw_ngfix_insertion.cc
test/rabitq_opt/: build_hnsw_bottom_rabitq.cc  build_hnsw_ngfix_rabitq.cc  search_hnsw_ngfix_rabitq.cc
test/tools/: data_loader.h  result_evaluation.h  result_evaluation_rabitq.h
