add_executable(build_hnsw_ngfix   build_hnsw_ngfix.cc)
add_executable(build_hnsw_ngfix_aknn   build_hnsw_ngfix_aknn.cc)
add_executable(search_hnsw_ngfix   search_hnsw_ngfix.cc)
add_executable(build_hnsw_bottom   build_hnsw_bottom.cc)
add_executable(test_hnsw_ngfix_insertion   test_hnsw_ngfix_insertion.cc)
add_executable(test_hnsw_ngfix_deletion   test_hnsw_ngfix_deletion.cc)
add_executable(build_hnsw_bottom_rabitq   rabitq_opt/build_hnsw_bottom_rabitq.cc)
add_executable(build_hnsw_ngfix_rabitq   rabitq_opt/build_hnsw_ngfix_rabitq.cc)
add_executable(search_hnsw_ngfix_rabitq   rabitq_opt/search_hnsw_ngfix_rabitq.cc)